[FIXED] text overflow for the blog title

--- a/frontEnd/src/containers/userProfile/tabs/Blogs.module.css
+++ b/frontEnd/src/containers/userProfile/tabs/Blogs.module.css
@@ -28,13 +28,14 @@
 
 .upperSegment{
     width: 100%;
-    height: 70px;
     display: flex;
     justify-content: space-around;
 }
 
 .h1Container{
     width: 80%;
+    overflow: hidden;
+    margin-bottom: 20px;
 }
 .h1Container h1{
     color: #04255f;
